# audioprocessor

./: .gitignore  CMakeLists.txt  README.md  STM32F769NIHx_FLASH.ld  container_build_prod.sh  flash-target-local.sh  flash-target-remote.sh  host_build_prod.sh  host_run_unit_tests_and_make_prod.sh  print-log-buffer-local.sh  print-log-buffer-remote.sh  reset-target-local.sh  reset-target.sh  run_make.sh  run_tests_and_make_prod.sh
API/: AudioProcessor.h  MIDI_Message.hpp  WeakAppStubs.c
Application/: ARMDSPFFTProcessor.hpp  AudioProcessor.cpp  AudioProcessor.h  AudioProcessor.hpp  BlockGraph.hpp  BlockState.hpp  DummyProcessFunctions.cpp  DummyProcessFunctions.hpp  FFTBlock.hpp  FIRBlock.cpp  FIRBlock.hpp  FIRCoefficients.hpp  FIRProcessor.hpp  GraphNode.cpp  GraphNode.hpp  LFO.hpp  LambdaEnvelopeFollower.hpp  LambdaLFO.hpp  LowPassFilterCoefficients.hpp  MIDIMap.hpp  MIDIMessageHandler.cpp  MIDIMessageHandler.h  MIDIMessageHandler.hpp  MIDIReceiver.cpp  MIDIReceiver.hpp  MIDI_Input_Task.c  MIDI_Input_Task.h  MIDI_Message.h  Messager_Task.c  Messager_Task.h  Monitor_Task.c  Monitor_Task.h  OscillatorBlock.hpp  ProcessBlock.cpp  ProcessBlock.hpp  ProcessBlockFunctions.cpp  ProcessBlockFunctions.hpp  ProcessBlockFunctions_FIRFilters.cpp  ProcessBlockFunctions_FIRFilters.hpp  SamplingTypes.h  (+4 more)
Application/ProcessBlocks/: ARMDSPFFTProcessor.hpp  ARMDSPFIRProcessor.hpp  CircularFIRProcessor.hpp  CoefficientTable.hpp  DelayBlock.hpp  DelayBuffer.hpp  FFTBlock.cpp  FFTBlock.hpp  FIRBlock.cpp  FIRBlock.hpp  IIRBlock.hpp  LowPassCoefficientTable.hpp  LowPassFIRBlock.hpp  LowPassFilterCoefficients.hpp  MixerBlock.hpp  OscillatorBlock.hpp  SuperSimpleProcessBlocks.hpp  constexpr_arm_sin_f32.hpp
Application/ProcessBlocks/ClippingDistortionBlock/: ClippingDistortionBlock.cpp  ClippingDistortionBlock.hpp
Application/ProcessBlocks/FIRBlock/: LowPassCoefficientTable.hpp  LowPassFilterCoefficients.cpp  LowPassFilterCoefficients.hpp
CPU/: STM32F769NIHx_FLASH.ld  malloc.c  stm32f7xx_it.c
Drivers/BSP/: BSP_Audio_Buffer_Interface.h  BSP_Audio_Codec_IO.c  BSP_Audio_Init.c  BSP_Audio_Init.h  BSP_Audio_Task.c  BSP_Audio_Task.h  BSP_Bringup.c  BSP_Fast_UART.c  BSP_Fast_UART.h  BSP_LED.c  BSP_LED.h  BSP_SDRAM.c  BSP_SDRAM.h  BSP_UART.c  BSP_UART.h  My_BSP_Bringup.c  My_BSP_Bringup.h  wm8994.c  wm8994.h
FreeRTOS/: FreeRTOSConfig.h
Help/: MemoryLogger.c  MemoryLogger.h  My_Logger.c  My_Logger.h  SerialLogger.c  SerialLogger.h  tinyprintf.c  tinyprintf.h
System/: BSP_Audio_Task.c  Monitor_Task.c  Monitor_Task.h  STM32F769NIHx_FLASH.ld  STM32F769NIHx_FLASH_APP_ONLY.ld  SerialLogger_Task.c  SerialLogger_Task.h  stm32f7xx_it.c
cmake-help/: help.cmake
gui/: blank.graph  gui.py  midi-only.py  output.graph  test.graph
gui/backendserver/: backendserver.py  testclient.py
gui/install-on-beaglebone/: scp-gui-to-beaglebone.sh  wget-and-scp-and-install.sh
gui/run-from-beaglebone/: flash-latest.sh  openocd-command.sh  start-midi-only.sh
scripts/: container_build_cross_tests.sh  container_build_prod.sh  flash-cross-tests-local.sh  flash-target-remote.sh  host_build_cross_tests.sh  host_build_prod.sh  host_run_unit_tests.sh  host_run_unit_tests_and_make_prod.sh  host_test_everything.sh  openocd-command.sh  sshtunneltogdbserveronbeaglebone.sh
test/: AudioProcessorTests.cpp  BlockGraphTests.cpp  ExampleTests.cpp  FAKE_Monitor_Task.c  FAKE_ProcessBlockFunctions_FIRFilters.cpp  FAKE_SerialLogger.c  FFTBlockTests.cpp  GraphNodeTests.cpp  MIDIMapTests.cpp  MIDIMessageHandlerTests.cpp  ProcessBlockTests.cpp
test/test-on-host/: BlockGraphTests.cpp  CircularFIRProcessorTests.cpp  ClippingDistortionBlockTests.cpp  DelayBlockTests.cpp  ExampleTests.cpp  FAKE_ProcessBlockFunctions_FIRFilters.cpp  FFTBlockTests.cpp  FIRBlockTests.cpp  IIRBlockTests.cpp  LFOTests.cpp  LambdaEnvelopeFollowerTests.cpp  LambdaLFOTests.cpp  MIDIMessageHandlerTests.cpp  MIDIReceiverTests.cpp  OscillatorBlockTests.cpp  ProcessBlockTests.cpp  help.cpp
test/test-on-target/: Testing_Task.cpp  Testing_Task.h  main.c
